Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23447

SIGSEGV in fil_system_t::keyrotate_next

    XMLWordPrintable

Details

    Description

      SET GLOBAL innodb_encryption_threads=5;
      SET GLOBAL innodb_encryption_rotate_key_age=0;
      SELECT SLEEP(5);  # Somewhat delayed crash happens during sleep
      

      Leads, sporadically, to:

      10.4.15 eae968f62d285de97ed607c87bc131cd863d5d03 (Optimized)

      Core was generated by `/test/MD110820-mariadb-10.4.15-linux-x86_64-opt/bin/mysqld --no-defaults --core'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  my_read (Filedes=Filedes@entry=40, 
          Buffer=Buffer@entry=0x149a739fbe70 "Limit", ' ' <repeats 21 times>, "Soft Limit", ' ' <repeats 11 times>, "Hard Limit", ' ' <repeats 11 times>, "Units     \nMax cpu time", ' ' <repeats 14 times>, "unlimited", ' ' <repeats 12 times>, "unlimited", ' ' <repeats 12 times>, "seconds   \nMax file size", ' ' <repeats 13 times>, "unlimited       "..., Count=Count@entry=4096, MyFlags=MyFlags@entry=0)
          at /test/10.4_opt/mysys/my_read.c:63
      [Current thread is 1 (Thread 0x149a739fe700 (LWP 586712))]
      (gdb) bt
      #0  my_read (Filedes=Filedes@entry=40, Buffer=Buffer@entry=0x149a739fbe70 "Limit", ' ' <repeats 21 times>, "Soft Limit", ' ' <repeats 11 times>, "Hard Limit", ' ' <repeats 11 times>, "Units     \nMax cpu time", ' ' <repeats 14 times>, "unlimited", ' ' <repeats 12 times>, "unlimited", ' ' <repeats 12 times>, "seconds   \nMax file size", ' ' <repeats 13 times>, "unlimited       "..., Count=Count@entry=4096, MyFlags=MyFlags@entry=0) at /test/10.4_opt/mysys/my_read.c:63
      #1  0x0000561dbc8c81dd in output_core_info () at /test/10.4_opt/sql/signal_handler.cc:66
      #2  0x0000561dbc8c8610 in handle_fatal_signal (sig=11) at /test/10.4_opt/sql/signal_handler.cc:339
      #3  <signal handler called>
      #4  fil_system_t::keyrotate_next (encrypt=false, recheck=false, space=0x149a9888f780, this=<optimized out>) at /test/10.4_opt/storage/innobase/fil/fil0crypt.cc:1598
      #5  fil_space_next (space=space@entry=0x149a9888f780, recheck=recheck@entry=false, encrypt=<optimized out>) at /test/10.4_opt/storage/innobase/fil/fil0crypt.cc:1638
      #6  0x0000561dbcc75ba0 in fil_crypt_find_space_to_rotate (recheck=<optimized out>, state=<optimized out>, key_state=<optimized out>) at /test/10.4_opt/storage/innobase/fil/fil0crypt.cc:1718
      #7  fil_crypt_thread () at /test/10.4_opt/storage/innobase/fil/fil0crypt.cc:2412
      #8  0x0000149a9ad396db in start_thread (arg=0x149a739fe700) at pthread_create.c:463
      #9  0x0000149a99eb3a3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      10.5.6 1c587481966abc7a9ad5309d0a91ca920f7a5657 (Debug)

      Core was generated by `/test/MD110820-mariadb-10.5.6-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  0x000055cea2a9934a in my_read (Filedes=Filedes@entry=39, 
          Buffer=Buffer@entry=0x14d5a65fc170 "Limit", ' ' <repeats 21 times>, "Soft Limit", ' ' <repeats 11 times>, "Hard Limit", ' ' <repeats 11 times>, "Units     \nMax cpu time", ' ' <repeats 14 times>, "unlimited", ' ' <repeats 12 times>, "unlimited", ' ' <repeats 12 times>, "seconds   \nMax file size", ' ' <repeats 13 times>, "unlimited       "..., Count=Count@entry=4096, MyFlags=MyFlags@entry=0)
          at /test/10.5_dbg/mysys/my_read.c:63
      63	      int got_errno= my_errno= errno;
      [Current thread is 1 (Thread 0x14d5a65fe700 (LWP 594745))]
      (gdb) bt
      #0  0x000055cea2a9934a in my_read (Filedes=Filedes@entry=39, Buffer=Buffer@entry=0x14d5a65fc170 "Limit", ' ' <repeats 21 times>, "Soft Limit", ' ' <repeats 11 times>, "Hard Limit", ' ' <repeats 11 times>, "Units     \nMax cpu time", ' ' <repeats 14 times>, "unlimited", ' ' <repeats 12 times>, "unlimited", ' ' <repeats 12 times>, "seconds   \nMax file size", ' ' <repeats 13 times>, "unlimited       "..., Count=Count@entry=4096, MyFlags=MyFlags@entry=0) at /test/10.5_dbg/mysys/my_read.c:63
      #1  0x000055cea22537c6 in output_core_info () at /test/10.5_dbg/sql/signal_handler.cc:68
      #2  0x000055cea2253d5d in handle_fatal_signal (sig=11) at /test/10.5_dbg/sql/signal_handler.cc:326
      #3  <signal handler called>
      #4  fil_system_t::keyrotate_next (encrypt=false, recheck=false, space=0x14d5d4c43a18, this=<optimized out>) at /test/10.5_dbg/storage/innobase/fil/fil0crypt.cc:1471
      #5  fil_space_next (space=0x14d5d4c43a18, recheck=recheck@entry=false, encrypt=encrypt@entry=false) at /test/10.5_dbg/storage/innobase/fil/fil0crypt.cc:1511
      #6  0x000055cea2991f4d in fil_crypt_find_space_to_rotate (recheck=<optimized out>, state=<optimized out>, key_state=<optimized out>) at /test/10.5_dbg/storage/innobase/fil/fil0crypt.cc:1591
      #7  fil_crypt_thread () at /test/10.5_dbg/storage/innobase/fil/fil0crypt.cc:2129
      #8  0x000014d5d70956db in start_thread (arg=0x14d5a65fe700) at pthread_create.c:463
      #9  0x000014d5d6493a3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed to be present in:
      MariaDB: 10.2.34 (dbg), 10.2.34 (opt), 10.3.25 (dbg), 10.3.25 (opt), 10.4.15 (dbg), 10.4.15 (opt), 10.5.6 (dbg), 10.5.6 (opt)

      Bug confirmed not present in:
      MariaDB: 10.1.47 (dbg), 10.1.47 (opt)
      MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.47 (dbg), 5.6.47 (opt), 5.7.29 (dbg), 5.7.29 (opt), 8.0.19 (dbg), 8.0.19 (opt)

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h 20m
                  3h 20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.